Fix the “squished” window controls in darkside theme on Linux #1104

--- a/app/internal_packages/ui-darkside/styles/darkside-window-controls.less
+++ b/app/internal_packages/ui-darkside/styles/darkside-window-controls.less
@@ -20,6 +20,11 @@
   transition-duration: 150ms;
   transition-property: border-radius, opacity, transform;
 }
+body.platform-linux .toolbar-window-controls button {
+  width: 12px;
+  height: 12px;
+  margin: 0;
+}
 
 .toolbar-window-controls:hover button {
   opacity: 1;
